--- a/Portrait/Geschichte-des-FEG/1.md
+++ b/Portrait/Geschichte-des-FEG/1.md
@@ -43,14 +43,15 @@ layout: Portrait
   <p>
     <strong>
       Literatur und Quellen:
-      <br>
-      
     </strong>
+    <br>
+    
     Adressbücher von Stuttgart von 1794,1804,1811,1829,1833,1839, Archiv der Stadt Stuttgart
     <br>
     
     Bauakten der Hospitalstraße 10, Archiv der Stadt Stuttgart
     <br>
+    
     v. Frisch, Christian: Festschrift zum 50 - jährigen Jubiläum der Realanstalt, 26.Okt.1868
     <br>
     
@@ -62,12 +63,17 @@ layout: Portrait
     
     Wais, Gustav: Altstuttgarter Bauten im Bild 1951, Bilkd 58
     <br>
+    
     Stadtpläne von 1794 und 1843 (?)
-    <p>
-      &gt; Zum Artikel von Dr. Abelein über 
-      <a href="gsab1.html">
-        &gt; die Geschichte
-        des FEG
-      </a>
+    <i class="fa fa-external-link">
+    </i>
+    Zum Artikel von Dr. Abelein über 
+    <a href="gsab1.html">
+      <i class="fa fa-external-link">
+      </i>
+      die Geschichte
+      des FEG
+    </a>
   </p>
+  
   
