--- a/Portrait/Geschichte-des-FEG/1.md
+++ b/Portrait/Geschichte-des-FEG/1.md
@@ -64,16 +64,13 @@ layout: Portrait
   <br>
   
   Stadtpläne von 1794 und 1843 (?)
-  <i class="fa fa-external-link">
-  </i>
   Zum Artikel von Dr. Abelein über 
-  <a href="gsab1.html">
+  <a href="/Portrait/Geschichte-des-FEG/2/">
     <i class="fa fa-external-link">
     </i>
     die Geschichte
     des FEG
   </a>
 </p>
-
 
 
