--- a/Portrait/Geschichte-des-FEG/1.md
+++ b/Portrait/Geschichte-des-FEG/1.md
@@ -72,5 +72,8 @@ layout: Portrait
     des FEG
   </a>
 </p>
-
+<script>
+  var myObj = document.getElementById("Geschichte-des-FEG");
+  myObj.className = "active";
+</script>
 
