--- a/Portrait/Geschichte-des-FEG/2.md
+++ b/Portrait/Geschichte-des-FEG/2.md
@@ -6,4 +6,7 @@ layout: Portrait
 <h3>
   kommt noch
 </h3>
-
+<script>
+  var myObj = document.getElementById("Geschichte-des-FEG");
+  myObj.className = "active";
+</script>
