--- a/Portrait/Geschichte-des-FEG/2.md
+++ b/Portrait/Geschichte-des-FEG/2.md
@@ -7,6 +7,5 @@ layout: Portrait
   kommt noch
 </h3>
 <script>
-  var myObj = document.getElementById("Geschichte-des-FEG");
-  myObj.className = "active";
+ unternavigation("Geschichte-des-FEG");
 </script>
