--- a/Portrait/Geschichte-des-FEG/2.md
+++ b/Portrait/Geschichte-des-FEG/2.md
@@ -7,5 +7,7 @@ layout: Portrait
   kommt noch
 </h3>
 <script>
- unternavigation("Geschichte-des-FEG");
+  var myObj = document.getElementById("Geschichte-des-FEG");
+  myObj.className = "active";
 </script>
+
