--- a/Portrait/Geschichte-des-FEG/1.md
+++ b/Portrait/Geschichte-des-FEG/1.md
@@ -73,7 +73,6 @@ layout: Portrait
   </a>
 </p>
 <script>
-  var myObj = document.getElementById("Geschichte-des-FEG");
-  myObj.className = "active";
+  var Geschichte-des-FEG = document.getElementById("Geschichte-des-FEG");
+  Geschichte-des-FEG.className = "active";
 </script>
-
