--- a/Portrait/Geschichte-des-FEG/2.md
+++ b/Portrait/Geschichte-des-FEG/2.md
@@ -7,7 +7,7 @@ layout: Portrait
   kommt noch
 </h3>
 <script>
-  var myObj = document.getElementById("Geschichte-des-FEG");
-  myObj.className = "active";
+  var Geschichte-des-FEG = document.getElementById("Geschichte-des-FEG");
+  Geschichte-des-FEG.className = "active";
 </script>
 
