--- a/Portrait/Geschichte-des-FEG/2.md
+++ b/Portrait/Geschichte-des-FEG/2.md
@@ -7,7 +7,7 @@ layout: Portrait
   kommt noch
 </h3>
 <script>
-  var Geschichte-des-FEG = document.getElementById("Geschichte-des-FEG");
-  Geschichte-des-FEG.className = "active";
+  var Geschichte_des_FEG = document.getElementById("Geschichte_des_FEG");
+  Geschichte_des_FEG.className = "active";
 </script>
 
