--- a/Portrait/Geschichte-des-FEG/1.md
+++ b/Portrait/Geschichte-des-FEG/1.md
@@ -73,6 +73,6 @@ layout: Portrait
   </a>
 </p>
 <script>
-  var Geschichte-des-FEG = document.getElementById("Geschichte-des-FEG");
-  Geschichte-des-FEG.className = "active";
+  var Geschichte_des_FEG = document.getElementById("Geschichte_des_FEG");
+  Geschichte_des_FEG.className = "active";
 </script>
