--- a/Portrait/Geschichte_des_FEG/1.md
+++ b/Portrait/Geschichte_des_FEG/1.md
@@ -73,6 +73,5 @@ layout: Portrait
   </a>
 </p>
 <script>
-  var Geschichte_des_FEG = document.getElementById("Geschichte_des_FEG");
-  Geschichte_des_FEG.className = "active";
+  highlight("Geschichte_des_FEG");
 </script>
