--- a/Portrait/Geschichte_des_FEG/2.md
+++ b/Portrait/Geschichte_des_FEG/2.md
@@ -7,7 +7,7 @@ layout: Portrait
   kommt noch
 </h3>
 <script>
-  var Geschichte_des_FEG = document.getElementById("Geschichte_des_FEG");
-  Geschichte_des_FEG.className = "active";
+  highlight("Geschichte_des_FEG");
 </script>
+
 
