--- a/Portrait/Geschichte_des_FEG/2.md
+++ b/Portrait/Geschichte_des_FEG/2.md
@@ -1,13 +1,9 @@
 ---
-title: Geschichte_des_FEG/2
+title: Geschichte_des_FEG
 layout: Portrait
 ---
 
 <h3>
   kommt noch
 </h3>
-<script>
-  highlight("Geschichte_des_FEG");
-</script>
-
 
