--- a/Portrait/Geschichte_des_FEG/1.md
+++ b/Portrait/Geschichte_des_FEG/1.md
@@ -1,5 +1,5 @@
 ---
-title: Geschichte_des_FEG/1
+title: Geschichte_des_FEG
 layout: Portrait
 ---
 
@@ -72,6 +72,3 @@ layout: Portrait
     des FEG
   </a>
 </p>
-<script>
-  highlight("Geschichte_des_FEG");
-</script>
