--- a/Portrait/Geschichte_des_FEG/2.md
+++ b/Portrait/Geschichte_des_FEG/2.md
@@ -1,9 +1,7 @@
 ---
-title: Geschichte_des_FEG
 layout: Portrait
 ---
 
-<h3>
-  kommt noch
-</h3>
-
+<script type="text/javascript">
+    ajaxload('/Portrait/Geschichte_des_FEG/2/');
+</script>
