--- a/Portrait/Geschichte_des_FEG/1.md
+++ b/Portrait/Geschichte_des_FEG/1.md
@@ -4,4 +4,5 @@ layout: Portrait
 
 <script type="text/javascript">
     ajaxload('/Portrait/Geschichte_des_FEG/1/');
+    unternavigation('Geschichte_des_FEG');
 </script>
