--- a/Portrait/Geschichte_des_FEG/2.md
+++ b/Portrait/Geschichte_des_FEG/2.md
@@ -3,6 +3,5 @@ layout: Portrait
 ---
 
 <script type="text/javascript">
-    ajaxload('/Portrait/Geschichte_des_FEG/2/');
-    unternavigation('Geschichte_des_FEG');
+    ajaxload('Portrait/Geschichte_des_FEG', '2');
 </script>
