--- a/Portrait/Geschichte_des_FEG/1.md
+++ b/Portrait/Geschichte_des_FEG/1.md
@@ -3,6 +3,5 @@ layout: Portrait
 ---
 
 <script type="text/javascript">
-    ajaxload('/Portrait/Geschichte_des_FEG/1/');
-    unternavigation('Geschichte_des_FEG');
+    ajaxload('Portrait/Geschichte_des_FEG', '1');
 </script>
