--- a/text/Portrait/Geschichte_des_FEG/1.md
+++ b/text/Portrait/Geschichte_des_FEG/1.md
@@ -63,7 +63,7 @@
   
   Stadtpläne von 1794 und 1843 (?)
   Zum Artikel von Dr. Abelein über 
-  <a href="/Portrait/Geschichte_des_FEG/2/">
+  <a href="javascript:ajaxload('Portrait', 'Geschichte_des_FEG/2');">
     <i class="fa fa-external-link">
     </i>
     die Geschichte
