--- a/Portrait/Geschichte_des_FEG/1.md
+++ b/Portrait/Geschichte_des_FEG/1.md
@@ -3,6 +3,7 @@ layout: Portrait
 ---
 
 <script type="text/javascript">
-    $('#sidebar').load('/static/sidebar/Portrait_Geschichte_des_FEG.html');
-    ajaxload('Portrait', 'Geschichte_des_FEG/1');
+    $('#sidebar').load('/static/sidebar/Portrait_Geschichte_des_FEG.html', function() {
+        ajaxload('Portrait', 'Geschichte_des_FEG/1');
+    }
 </script>
