--- a/Portrait/Geschichte_des_FEG/2.md
+++ b/Portrait/Geschichte_des_FEG/2.md
@@ -3,5 +3,7 @@ layout: Portrait
 ---
 
 <script type="text/javascript">
-    ajaxload('Portrait/Geschichte_des_FEG', '2');
+    $('#sidebar').load('/static/sidebar/Portrait_Geschichte_des_FEG.html', function() {
+        ajaxload('Portrait', 'Geschichte_des_FEG/2');
+    });
 </script>
