--- a/Portrait/Geschichte_des_FEG/2.md
+++ b/Portrait/Geschichte_des_FEG/2.md
@@ -3,7 +3,9 @@ layout: Portrait
 ---
 
 <script type="text/javascript">
-    $('#sidebar').load('/static/sidebar/Portrait_Geschichte_des_FEG.html', function() {
-        ajaxload('Portrait', 'Geschichte_des_FEG/2');
+    require(['custom'], function(custom){
+        $('#sidebar').load('/static/sidebar/Portrait_Geschichte_des_FEG.html', function() {
+            ajaxload('Portrait', 'Geschichte_des_FEG/2');
+        });
     });
 </script>
